# GuestBookApp

./: Dockerfile  build.sh  db.sqlite3  pyproject.toml  render.yaml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
mysite/: settings.py  urls.py
render/: admin.py  helper.py  models.py  urls.py  views.py
render/migrations/: 0001_initial.py  0002_visitor_time.py
render/static/: index.css
render/templates/: index.html  visitors.html
