[tool.poetry]
name = "guestbook"
version = "0.1.0"
description = ""
authors = ["tanbirali <tanbirali2004@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
django = "^4.2"
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
